Single course stat design alignement fixes

--- a/assets/scss/pages/_single-course.scss
+++ b/assets/scss/pages/_single-course.scss
@@ -86,7 +86,7 @@
 				display: grid;
 				grid-template-columns: 1fr 1fr;
 				row-gap: 18px;
-				column-gap: 42px;
+				column-gap: 35px;
 
 				span {
 					color: $mto-text-color;
